Maj de la configuration tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,17 @@
+# Rebind to Ctrl-a
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # Improve colors
 set -g default-terminal 'screen-256color'
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
 
 # Set scrollback buffer to 10000
 set -g history-limit 99999
@@ -7,3 +19,36 @@ set -g history-limit 99999
 # Customize the status line
 set -g status-fg  green
 set -g status-bg  black
+
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# status
+set-option -g status-interval 1
+set-option -g status-left-length 20
+set-option -g status-left ''
+set-option -g status-right '%Y-%m-%d %H:%M:%S '
+set-option -g status-bg blue
+set-window-option -g window-status-style fg=green
+set-window-option -g window-status-current-style fg=red
+
+set-window-option -g mode-keys vi
+
+# keybinds
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
