--- a/tmux.conf
+++ b/tmux.conf
@@ -52,3 +52,5 @@ unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy'
+
+set -sg escape-time 0
